# LearnOpenGL

./: README.md  meson.build  meson_options.txt  package.json
01. Getting started/: meson.build
01. Getting started/02. Hello Triangle/: meson.build
01. Getting started/02. Hello Triangle/01. Hello Triangle/: hello-triangle-window.ui  hello-triangle.gresource.xml  meson.build  render.cpp  render.h
01. Getting started/02. Hello Triangle/02. Hello Triangle (indexed)/: hello-triangle-window.cpp  hello-triangle-window.ui  hello-triangle.cpp  meson.build  render.cpp  render.h
01. Getting started/02. Hello Triangle/03. Exercises/: meson.build
01. Getting started/02. Hello Triangle/03. Exercises/001/: ex-001-window.ui  ex-001.cpp  ex-001.gresource.xml  meson.build  render.cpp  render.h
01. Getting started/02. Hello Triangle/03. Exercises/003/: appwindow.ui  ex-003-window.ui  ex-003.gresource.xml  fs-02.glsl  meson.build  render.cpp  render.h
01. Getting started/03. Shaders/: meson.build
01. Getting started/03. Shaders/01. Uniform/: appwindow.ui  fs.glsl  meson.build  render.cpp  render.h  uniform-window.cpp  uniform.cpp  uniform.gresource.xml
01. Getting started/03. Shaders/02. Interpolation/: interpolation-window.cpp  interpolation-window.ui  interpolation.cpp  interpolation.gresource.xml  meson.build  render.cpp  render.h  vs.glsl
01. Getting started/03. Shaders/03. Exercises/001/: ex-001-window.ui  ex-001.gresource.xml  meson.build  render.h  vs.glsl
01. Getting started/03. Shaders/03. Exercises/002/: ex-002-window.ui  ex-002.cpp  ex-002.gresource.xml  fs.glsl  meson.build  render.cpp  render.h  vs.glsl
01. Getting started/04. Textures/: meson.build
01. Getting started/04. Textures/01. Textures/: fs.glsl  meson.build  render.cpp  render.h  textures-window.cpp  textures-window.h  textures-window.ui  textures.cpp  textures.gresource.xml
01. Getting started/04. Textures/02. Combined/: appwindow.ui  combined-window.cpp  combined.cpp  combined.gresource.xml  meson.build  render.cpp  vs.glsl
01. Getting started/05. Transformations/: meson.build
01. Getting started/05. Transformations/01. GLM/: glm-window.cpp  glm-window.ui  glm.cpp  glm.gresource.bak  glm.gresource.xml  meson.build  render.cpp  render.h
01. Getting started/06. Coordinate Systems/: meson.build
01. Getting started/06. Coordinate Systems/01. Coordinate Systems/: cs-window.cpp  cs-window.ui  cs.cpp  cs.gresource.xml  meson.build  render.cpp  render.h
01. Getting started/06. Coordinate Systems/02. Cube/: cube-window.cpp  cube-window.ui  cube.cpp  cube.gresource.xml  meson.build  render.cpp  render.h
01. Getting started/06. Coordinate Systems/03. Multiple Cubes/: appwindow.ui  mcubes-window.cpp  mcubes.cpp  mcubes.gresource.xml  meson.build  render.cpp  render.h
01. Getting started/06. Coordinate Systems/04. Exercises/: meson.build
01. Getting started/07. Camera/: meson.build
01. Getting started/07. Camera/01. Circle/: circle-window.cpp  circle-window.ui  circle.cpp  circle.gresource.xml  meson.build  render.cpp  render.h
01. Getting started/07. Camera/02. Walk/: meson.build  render.cpp  render.h  walk-window.cpp  walk-window.h  walk-window.ui  walk.cpp  walk.gresource.xml
01. Getting started/07. Camera/03. Walk Look Zoom/: appwindow.ui  meson.build  render.cpp  render.h  wlz-window.cpp  wlz.cpp  wlz.gresource.xml
01. Getting started/07. Camera/04. With Camera class/: fs.glsl  meson.build  render.cpp  render.h  wcamera-window.cpp  wcamera-window.ui  wcamera.cpp  wcamera.gresource.xml
02. Lighting/: meson.build
02. Lighting/01. Colors/: colors-fs.glsl  colors-window.cpp  colors-window.ui  colors.cpp  colors.gresource.xml  meson.build  render.cpp  render.h
02. Lighting/02. Basic Lighting/: meson.build
02. Lighting/02. Basic Lighting/01. Diffuse/: diffuse-fs.glsl  diffuse-vs.glsl  diffuse-window.cpp  diffuse-window.ui  diffuse.cpp  diffuse.gresource.xml  light-cube-vs.glsl  meson.build  render.cpp  render.h
02. Lighting/02. Basic Lighting/02. Specular/: meson.build  render.cpp  render.h  specular-fs.glsl  specular-window.cpp  specular-window.ui  specular.cpp  specular.gresource.xml
02. Lighting/02. Basic Lighting/03. Exercises/: meson.build
02. Lighting/03. Materials/: meson.build
02. Lighting/03. Materials/01. Materials/: appwindow.ui  materials-fs.glsl  materials-window.cpp  materials.cpp  materials.gresource.xml  meson.build  render.cpp
02. Lighting/03. Materials/02. Exercises/: meson.build
02. Lighting/04. Lighting Maps/: meson.build
02. Lighting/04. Lighting Maps/01. Diffuse/: diffuse-map-fs.glsl  diffuse-map-window.cpp  diffuse-map-window.ui  diffuse-map.cpp  diffuse-map.gresource.xml  meson.build  render.cpp  render.h
02. Lighting/04. Lighting Maps/02. Specular/: meson.build  render.cpp  render.h  specular-map-fs.glsl  specular-map-window.cpp  specular-map-window.ui  specular-map.cpp  specular-map.gresource.xml
02. Lighting/05. Light Casters/: meson.build
02. Lighting/05. Light Casters/01. Directional/: appwindow.ui  directional-fs.glsl  directional.gresource.xml  meson.build  render.cpp  render.h
02. Lighting/05. Light Casters/02. Point/: appwindow.ui  light-cube-fs.glsl  meson.build  point-fs.glsl  point.gresource.xml  render.cpp  render.h
02. Lighting/05. Light Casters/03. Spotlight/: appwindow.ui  meson.build  render.cpp  render.h  spotlight-fs.glsl  spotlight.gresource.xml
02. Lighting/05. Light Casters/04. Soft Spotlight/: appwindow.ui  meson.build  render.cpp  render.h  soft-spotlight-fs.glsl  soft-spotlight.gresource.xml
02. Lighting/06. Multiple Lights/: appwindow.ui  meson.build  multiple-lights-fs.glsl  multiple-lights-vs.glsl  multiple-lights.gresource.xml  render.cpp  render.h
03. Model Loading/: meson.build
03. Model Loading/01. Model Loading/: appwindow.ui  meson.build  model-loading-fs.glsl  model-loading-vs.glsl  model-loading.gresource.xml  render.cpp  render.h
appwindow/: appwindow.cpp  appwindow.h  main.cpp  meson.build
include/: camera.h  gresource_io.h  load_texture.h  mesh.h  model.h  shader.h  timeop.h
(+105 files in other folders)
